--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 ctranslate2==2.12.0
-fugashi[unidic]==1.1.2
+fugashi[unidic-lite]==1.1.2
 neologdn==0.5.1
 nltk==3.7
 s3fs==2022.1.0
@@ -7,3 +7,4 @@ sacremoses==0.0.47
 sentencepiece==0.1.96
 streamlit==1.5.1
 truecase==0.0.14
+unidic-lite 1.0.8
